# ChangeLog for dev-libs/boost
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/boost/ChangeLog,v 1.286 2012/12/15 14:45:27 mgorny Exp $

*boost-1.52.0-r5 (15 Dec 2012)

  15 Dec 2012; Michał Górny <mgorny@gentoo.org> +boost-1.52.0-r5.ebuild,
  metadata.xml:
  Migrate to python-r1.

  22 Nov 2012; Rick Farina <zerochaos@gentoo.org> boost-1.49.0-r2.ebuild:
  sorry about that, that commit was not meant for gentoo-x86, reverting.

  22 Nov 2012; Rick Farina <zerochaos@gentoo.org> boost-1.49.0-r2.ebuild:
  fix to parse MAKEOPTS jobs properly, same style as newer ebuilds

*boost-1.52.0-r4 (22 Nov 2012)

  22 Nov 2012; Diego E. Pettenò <flameeyes@gentoo.org> +boost-1.52.0-r4.ebuild,
  +files/boost-1.52.0-tuple.patch, -boost-1.52.0-r3.ebuild:
  Add patch to fix boost's tuple library. Thanks to Alex in bug #443992.

*boost-1.52.0-r3 (18 Nov 2012)

  18 Nov 2012; Diego E. Pettenò <flameeyes@gentoo.org> +boost-1.52.0-r3.ebuild,
  -boost-1.52.0-r2.ebuild:
  Disable the context library, which is currently not used by anything in tree
  and only works on a subset of architectures (bug #443012) and has problem with
  multilib builds (bug #441588). Make sure to remove the headers as well, for
  both context and locale.

  13 Nov 2012; Jeroen Roovers <jer@gentoo.org> boost-1.52.0-r2.ebuild:
  Marked -hppa (bug #443012).

  11 Nov 2012; Brian Harring <ferringb@gentoo.org> metadata.xml:
  fix malformed metadata.xml

  11 Nov 2012; Diego E. Pettenò <flameeyes@gentoo.org> boost-1.52.0-r2.ebuild:
  Import the pkg_preinst bit to make sure the links are really gone.

*boost-1.52.0-r2 (11 Nov 2012)

  11 Nov 2012; Diego E. Pettenò <flameeyes@gentoo.org> +boost-1.52.0-r2.ebuild,
  -boost-1.46.1-r1.ebuild, -boost-1.51.0-r1.ebuild, -boost-1.52.0-r1.ebuild,
  -files/boost-1.37.0-darwin-long-double.patch,
  -files/boost-1.45.0-lambda_bind.patch, -files/boost-1.46.1-python32.patch,