@@ -14,17 +14,20 @@ AUX boost-1.52.0-tuple.patch 500 SHA256 dbf631c8c412ea12b3d63dd4b515e0d5f1383a13
 AUX remove-toolset-1.48.0.patch 396 SHA256 59af4c05d71def0b14e22a7a5f756a054ca82e3f9686b7668335af7d9bed28fa SHA512 bbb01be2e4b4807eeb19faf13fc6c73e3cb8843953586312076a15c67ad5c5cac683fc3fb26f4e2902c60ab7930e83922f4d499756a85f78a20ac53399329f61 WHIRLPOOL 2490dac69a45b3f48e2513b4f21d75dc7cf5361411541dde96f027c66ca459df5390708902c86f11577d1129410f52d20de1ff275524fb51083a17eee6adc332
 DIST boost_1_49_0.tar.bz2 48499961 SHA256 dd748a7f5507a7e7af74f452e1c52a64e651ed1f7263fce438a06641d2180d3c SHA512 9f6198270659df112a57731afe31cbf1012d103ba36ed82f6c3f1bdc0185ddb89dcc42c5dfb9ee3f95973d52999aad6c7509dc61125420d45146e39ebf20219d WHIRLPOOL c049b4212307b0208d0b37ac870a7cfb8562d2b685ce505e1971af7bc68ae9746b06ea80ddc52599ed4cbd6dc3305b5f8051cd771387412aaa1d2f8e939a48ba
 DIST boost_1_52_0.tar.bz2 54421709 SHA256 222b6afd7723f396f5682c20130314a10196d3999feab5ba920d2a6bf53bac92 SHA512 fc512d3bfa6a39a60fee548775c97239271cf757587b8df7ed739c800844a819a359dca172be0e69ad7752753753139bf11f0813d650066d58386662fe32842d WHIRLPOOL 73bbab4a1d2a652200f4b5e669440a2afcebcea96a1139ecc75213067ca32d5cadb0f060bb0ec2e29e9e31272fb7ec9d2cb960801032ee6c5dcb86564766411d
+DIST boost_1_53_0_beta1.tar.bz2 55879466 SHA256 a86669b92af08bc05a96857f893d8f7e4bdaecf3c58bfe13b8a57b30b4470685 SHA512 9acc6d96610516f4198bf922ed6a14d6948315aee0ec7b32b04e2c59620a582a1d0cdf83b8ad4c8298a33d686fd8a1f2dd1dd5012750981774824d119e082579 WHIRLPOOL ef654834d5cfefdeb5358cd70dafaf07391820c929e0285b9e78596a27eb0fbd0cd9eeb59f1a8322650f70a25c2a66ad985ff5a9225d47162a13ca486a9cc596
 EBUILD boost-1.49.0-r2.ebuild 14407 SHA256 0b2876567540ccf696342fe43a67590fa03c60d13a2b7f8796d40c1344b54032 SHA512 4249e7059c0c54b3a11737d444a6453254aba27d3b247841323045ea269ef4091c2818394c257303ef144564a48f18991ab90eea9d9378203b46498e74a904c6 WHIRLPOOL 4a30c5cd4cbdcd6592f609fcdb4c16a2515d3748fe841ed560deccd45a0795b013a57533613967fe75efccb04eaf2e534a75861173805c96f2422d2f24ec2d94
-EBUILD boost-1.52.0-r4.ebuild 9471 SHA256 dc520d7cfa9a368b0329551b6092420913c00da53422117e196266fc98edacfe SHA512 f8ef281244b2457262c546f6dc520750fcc00f9b2c2e17b8941afd1d0ea9dbe9fe69d89f56398f2043e154bfb31bfe472fab92dbb88be15ad2b02fa1fa35da74 WHIRLPOOL 567015d935a7bd8fb440b57b1ed169dac499135bb60db7cca25d2cea5e1b5e16dce7502af6b77dcd4e9b3174a83353af7ba79dea9c2f61224884e2b3433e74bf
 EBUILD boost-1.52.0-r5.ebuild 9192 SHA256 a18df966e8a9dee2739e3075ff026314f8a982b31ad721e0250e937098ce9963 SHA512 07dc87d14cb724f5ce4f6036c41c5d652a442100a8e903ead5fcf26330b821081feaeed6fba79d5abdbd4e428b5a86be7f5a5cf51b19ac11c20016337ba1543a WHIRLPOOL dd30a72812b322cc5cce325e3079b05ed243208bcc15a2a5d7f6f85400495fdb5f68693d4a0f70f6034af985632d54fc8f865054ee95a186f00d368d558f0377
-MISC ChangeLog 48746 SHA256 6ccff04dbae6a390389cdb95aa60f307f42438ce9406a0e185875894c55fc438 SHA512 092e37dc6ff1c2e2b1f9b5c50fe2a383b36fec5194c6b62f3958f4f8fec265fa2d287f2faf64ab58f09a8b2b1f6c83d75b62c9dd9a0c9c0c5b2f231b82d15c15 WHIRLPOOL ad528722454e69f617f0fc1071dd9914fcbaa7ffea351c72c71d9c08c470937181c585bb6df1fa462a7c38ec814778b2c04f18d0a1fd085dc88bf6690e40fd52
+EBUILD boost-1.53.0_beta1.ebuild 9109 SHA256 3ecf741e9e9295319477d643d0e997557ff1afef3ca2d3fb42aa08130945c701 SHA512 00652dd5c263400045ab692fc9c2f6ad45114875949d83837d876327e226dfb27c5b9614531d033d59b388e399501ba0a334ca66d4ff0a95f1a35ad7afc0b08c WHIRLPOOL c5113b7279d12e1b9bf433761529414c20c8964e970f65ce4a52a3e444ae15c0ef35ec78c7940054b16b2dc123ff2cc4af9593a75210b8310b18e82c7f6f28c4
+MISC ChangeLog 48975 SHA256 687557c69e83d2a924d8f46b5e77959e0997a2c305796223010ad2398a066a5f SHA512 b254e982a35e9e0252f17070f3bd9759a0c68e0cd8dbac0717407904dfaa67f445cd29833157f9e7bb38ff8185ebb9f3b64c38a4bf41139606621d77a5609ed3 WHIRLPOOL b7bf108a8331056b1c13f12d5208ee4e2ca54246e69df9e90979781fde8386e280435238bd3257848e358ec4486d6477a4036c3132f2802bcf8e719cd8d1387b
 MISC metadata.xml 1220 SHA256 12442e258455aa70d08879028a9bb0424d6a5ceea321984009ae7dd51af10c50 SHA512 163fa62be2cad395e8f9bb7779d105bd02be0e09ba4571c41accf707ec25b9ad0d15a62db90c2cc01660b3759235493c00d96f9b741a93fe857c4bea15ac52b9 WHIRLPOOL ae70da326b7b36689ee9a7f3c29921e9e4d85fd7f8b7863866ff9aa7a86eae2983fb12e23f7f0a0aac35a8c09572954ebf67212bb103bed4e15ee2e4ec764ba0
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iJwEAQEIAAYFAlDMjR0ACgkQfXuS5UK5QB1/qwP/cw5xHhvZB/mz+u/0vxWgOEzo
-hb7QiekePoUfTXABrZg8qjDKFcR1axXH12J2mR1QjJctQbjOd7ZCSElYQsieRp3w
-HXXwobFdKgUj4rX33de30AI4LDB0J8T4wYV9bknngbkm0uSrBpeXtVLXKaSAcdCC
-YzUtQ895esUhJdJ8vAI=
-=racv
+iQEcBAEBCAAGBQJRAw+RAAoJEBzRPIrUMBNCfiAH/3mlAcTTomXqXk1+PyLxX30c
+yi7iLwbSQe5Cnu1Y3Jsg5+JFH8O79D/Fgq2vy94LauEUyFLV3WSRls4I1ik12zCq
+rrB9JLm50v+jP8EyifQGZXGZ+b/d2c+K5+6166Jz8VHHUgLDNz6AfthnGL7n3q/N
+ERfif5pYe/rBC5W4CBI24q8nrFFhTDtPJLDhEKqzS1bWE3YNJ2TRkJ86mu5iCZCs
+q69+iXSr/O6hknJEvZW0gAqC1Jpm1v45bDTsDJmvBcBJ4BWUtmGB4GV0Yir2Y+xt
+kLMtcEH+4iYVAhdfVpkCVROQVylipNT21P2+HMmUGSlZH9hcZQuSTCl6bkkHjQg=
+=Js3C
 -----END PGP SIGNATURE-----
