@@ -1,6 +1,12 @@
 # ChangeLog for dev-libs/boost
-# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/boost/ChangeLog,v 1.286 2012/12/15 14:45:27 mgorny Exp $
+# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/boost/ChangeLog,v 1.287 2013/01/25 23:04:42 flameeyes Exp $
+
+*boost-1.53.0_beta1 (25 Jan 2013)
+
+  25 Jan 2013; Diego E. Pettenò <flameeyes@gentoo.org>
+  +boost-1.53.0_beta1.ebuild, -boost-1.52.0-r4.ebuild:
+  Version bump to latest beta for testing; remove non stable candidate ebuild.
 
 *boost-1.52.0-r5 (15 Dec 2012)
 
